spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    max-width: 1200px;
+    margin: auto;
+}
